k8s/deployments.yaml
# ==========================================
# AUTH SERVICE
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      nodeSelector:
        eks.amazonaws.com/compute-type: auto
      containers:
        - name: auth-service
          image: 891377095805.dkr.ecr.us-east-1.amazonaws.com/auth-service:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: togglemaster
spec:
  selector:
    app: auth-service
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP

---
# ==========================================
# FLAG SERVICE
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      nodeSelector:
        eks.amazonaws.com/compute-type: auto
      containers:
        - name: flag-service
          image: 891377095805.dkr.ecr.us-east-1.amazonaws.com/flag-service:latest
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: togglemaster
spec:
  selector:
    app: flag-service
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP

---
# ==========================================
# TARGETING SERVICE
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      nodeSelector:
        eks.amazonaws.com/compute-type: auto
      containers:
        - name: targeting-service
          image: 891377095805.dkr.ecr.us-east-1.amazonaws.com/targeting-service:latest
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: togglemaster
spec:
  selector:
    app: targeting-service
  ports:
    - port: 8003
      targetPort: 8003
  type: ClusterIP

---
# ==========================================
# EVALUATION SERVICE
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      nodeSelector:
        eks.amazonaws.com/compute-type: auto
      containers:
        - name: evaluation-service
          image: 891377095805.dkr.ecr.us-east-1.amazonaws.com/evaluation-service:latest
          ports:
            - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: togglemaster
spec:
  selector:
    app: evaluation-service
  ports:
    - port: 8004
      targetPort: 8004
  type: ClusterIP

---
# ==========================================
# ANALYTICS SERVICE
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      nodeSelector:
        eks.amazonaws.com/compute-type: auto
      containers:
        - name: analytics-service
          image: 891377095805.dkr.ecr.us-east-1.amazonaws.com/analytics-service:latest
          ports:
            - containerPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: togglemaster
spec:
  selector:
    app: analytics-service
  ports:
    - port: 8006
      targetPort: 8006
  type: ClusterIP
