k8s/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-ingress
  namespace: togglemaster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Auth Service
      - path: /auth(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8001
      # Flag Service
      - path: /flags(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: flag-service
            port:
              number: 8002
      # Targeting Service
      - path: /targeting(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: targeting-service
            port:
              number: 8003
      # Evaluation Service
      - path: /evaluate(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: evaluation-service
            port:
              number: 8004
      # Analytics Service
      - path: /analytics(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 8005
